[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
automerge = "0.10.0"
samod = { version="0.12.0", git="https://github.com/LilithSilver/samod", branch = "fix-descriptor-overflow", features = ["tokio", "threadpool"] }
futures = "0.3.32"
tokio = { version = "1.52.3", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing = "0.1.40"
tracing-appender = "0.2.5"
serde_json = "1.0.150"
uuid = { version = "1.23.3", features = ["v4"] }
axum = "0.8.9"
tower-http = { version = "0.6.11", features = ["cors"] }
lock-free = "0.1.2"
rayon = "1.12.0"
chrono = "0.4.45"

# create profile release_debug
[profile.release_debug]
inherits = "release"
opt-level = 0
debug = true
lto = false
panic = "abort"
codegen-units = 1
panic-strategy = "abort"
#config flag "release_debug"

# set release_debug as default profile
default = ["release_debug"]
